# mapping-25-26

./: README.md  inside_bay_test_settings  setup_lidar.bash
install/: local_setup.sh  setup.sh
install/include/pointcloud_filters/pointcloud_filters/msg/: buoy_detection_array.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/include/pointcloud_filters/pointcloud_filters/msg/detail/: buoy_detection__functions.c  buoy_detection__rosidl_typesupport_fastrtps_c.h  buoy_detection__rosidl_typesupport_introspection_cpp.hpp  buoy_detection__struct.h  buoy_detection__type_support.c  buoy_detection_array__functions.c  buoy_detection_array__struct.hpp  (+15 more)
install/include/pointcloud_filters/pointcloud_filters/srv/: get_cloud_window.h  get_cloud_window.hpp
install/lib/pointcloud_filters/: buoy_tracker  buoy_visualizer  tracked_buoy_visualizer
install/lib/unitree_lidar_ros2/: unitree_lidar_ros2_node
install/pointcloud_filters/share/pointcloud_filters/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake
install/pointcloud_filters/share/pointcloud_filters/launch/: buoy_detector.launch.py
install/pointcloud_filters/share/pointcloud_filters/msg/: BuoyDetection.idl  TrackedBuoyArray.idl  TrackedBuoyArray.msg
install/ros_numpy/share/ros_numpy/: package.bash  package.zsh
install/share/ament_index/resource_index/package_run_dependencies/: pointcloud_filters
install/share/ament_index/resource_index/rosidl_interfaces/: pointcloud_filters
install/share/my_lidar_pkg/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/share/pointcloud_filters/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/pointcloud_filters/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_pointcloud_filters__rosidl_generator_cExport-noconfig.cmake  export_pointcloud_filters__rosidl_generator_cExport.cmake  export_pointcloud_filters__rosidl_generator_cppExport.cmake  export_pointcloud_filters__rosidl_generator_pyExport-noconfig.cmake  export_pointcloud_filters__rosidl_generator_pyExport.cmake  export_pointcloud_filters__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_pointcloud_filters__rosidl_typesupport_fastrtps_cExport.cmake  export_pointcloud_filters__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_pointcloud_filters__rosidl_typesupport_fastrtps_cppExport.cmake  pointcloud_filtersConfig.cmake  pointcloud_filters__rosidl_typesupport_cExport-noconfig.cmake  pointcloud_filters__rosidl_typesupport_cExport.cmake  pointcloud_filters__rosidl_typesupport_cppExport-noconfig.cmake  pointcloud_filters__rosidl_typesupport_cppExport.cmake  pointcloud_filters__rosidl_typesupport_introspection_cExport-noconfig.cmake  pointcloud_filters__rosidl_typesupport_introspection_cExport.cmake  pointcloud_filters__rosidl_typesupport_introspection_cppExport-noconfig.cmake  pointcloud_filters__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/share/pointcloud_filters/msg/: BuoyDetection.msg  BuoyDetectionArray.idl  BuoyDetectionArray.msg
install/share/pointcloud_filters/srv/: GetCloudWindow.idl  GetCloudWindow.srv  GetCloudWindow_Request.msg  GetCloudWindow_Response.msg
install/share/unitree_lidar_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/unitree_lidar_sdk/: package.dsv  package.ps1  package.sh
install/unitree_lidar_ros2/lib/unitree_lidar_ros2/: unitree_lidar_ros2_node
install/unitree_lidar_ros2/share/unitree_lidar_ros2/: package.sh
log/: latest_build  latest_list
src/pointcloud_filters/: CMakeLists.txt  README.md
src/pointcloud_filters/msg/: TrackedBuoy.msg
src/pointcloud_filters/pointcloud_filters/: delete_water.py
(+53 files in other folders)
