<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_filters</name>
  <version>0.1.0</version>
  <description>Point cloud filtering utilities for LiDAR: range and z clipping.</description>
  <maintainer email="jacob@example.com">jacob</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>visualization_msgs</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- ros_numpy is ROS 1; avoid depending on it in ROS 2. Use sensor_msgs_py.point_cloud2 instead. -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
